--- a/index.html
+++ b/index.html
@@ -1,108 +1,140 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HW1</title>
-    <link rel="stylesheet" href="./css/styles.css"/>
-</head>
-<body>
-    <header>
-        <nav>
-            <a href="">WebStudio</a>
-            <ul>                
-                <li>
-                    <a href="">Студия</a>
-                </li>
-                <li>
-                    <a href="">Портфолио</a>
-                </li>
-                <li>
-                    <a href="">Контакты</a>
-                </li>
-            </ul>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/main.min.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <nav class="navigation">
+          <a class="logo link" href="#">Web<span class="logo_dark">Studio</span> </a>
+          <ul class="navigation__list list">
+            <li class="navigation__item">
+              <a class="navigation__link link" href="">Студия</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link link" href="">Портфолио</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link link" href="">Контакты</a>
+            </li>
+          </ul>
+          <button type="button" class="function-btn">
+            <svg class="funktion-btn__svg">
+              <use href="./images/icons.svg#icon-menu-btn"></use>
+            </svg>
+          </button>
         </nav>
-            <ul>
-                <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a href="tel:+380961111111">+38 096 111 11 11</a>
-                </li>
-            </ul>
+        <ul class="contact__list list">
+          <li class="contact__item">
+            <a class="contact__link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="contact__item">
+            <a class="contact__link link" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
     </header>
     <main>
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
-        </section>
-        <section>
-            <h2 class="visually-hidden">Приемущества</h2>
-             <ul>
-                 <li>
-                     <h3>Внимание к деталям</h3>
-                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                 </li>
-                 <li>
-                     <h3>Пунктуальность</h3>
-                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                 </li>
-                 <li>
-                     <h3>Планирование</h3>
-                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                 </li>
-                 <li>
-                     <h3>Современные технологии</h3>
-                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                 </li>
-             </ul>
-        </section>
-        <section>
-            <h2>Чем мы занимаемся</h2>
-            <ul>
-                <li><img width="370" src="./images/img1.jpeg" alt="Проект1"></li>
-                <li><img width="370" src="./images/img2.jpeg" alt="Проект2"></li>
-                <li><img width="370" src="./images/img3.jpeg" alt="Проект3"></li>
-            </ul>
-        </section>
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
-                <li>
-                    <img width="270" src="./images/photo1.jpeg" alt="Дизайнер">
-                    <h3>Игорь Демьяненко</h3>
-                    <p lang="en">Product Designer</p>
-                </li>
-                <li>
-                    <img width="270" src="./images/photo2.jpeg" alt="Разработчик">
-                    <h3>Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>
-                </li>
-                <li>
-                    <img width="270" src="./images/photo3.jpeg" alt="Маркетолог">
-                    <h3>Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>
-                </li>
-                <li>
-                    <img width="270" src="./images/photo4.jpeg" alt="Дизайнер">
-                    <h3>Михаил Ермаков</h3>
-                    <p lang="en">UI Designer</p>
-                </li>
-            </ul>
-        </section>
+      <!-- <section class="hero">
+        <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
+        <button class="main-btn" type="button">Заказать услугу</button>
+      </section>
+      <section>
+        <h2 class="visually-hidden">Приемущества</h2>
+        <ul>
+          <li>
+            <h3>Внимание к деталям</h3>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3>Современные технологии</h3>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
+      </section> -->
+      <!-- <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li><img width="370" src="./images/img1.jpeg" alt="Проект1" /></li>
+          <li><img width="370" src="./images/img2.jpeg" alt="Проект2" /></li>
+          <li><img width="370" src="./images/img3.jpeg" alt="Проект3" /></li>
+        </ul>
+      </section> -->
+      <!-- <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img width="270" src="./images/photo1.jpeg" alt="Дизайнер" />
+            <h3>Игорь Демьяненко</h3>
+            <p lang="en">Product Designer</p>
+          </li>
+          <li>
+            <img width="270" src="./images/photo2.jpeg" alt="Разработчик" />
+            <h3>Ольга Репина</h3>
+            <p lang="en">Frontend Developer</p>
+          </li>
+          <li>
+            <img width="270" src="./images/photo3.jpeg" alt="Маркетолог" />
+            <h3>Николай Тарасов</h3>
+            <p lang="en">Marketing</p>
+          </li>
+          <li>
+            <img width="270" src="./images/photo4.jpeg" alt="Дизайнер" />
+            <h3>Михаил Ермаков</h3>
+            <p lang="en">UI Designer</p>
+          </li>
+        </ul>
+      </section> -->
     </main>
-    <footer>
-            <a href="">WebStudio</a>
-            <address>г. Киев, пр-т Леси Украинки, 26</address>
-            <ul>
-                <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a href="tel:+380961111111">+38 096 111 11 11</a>
-                </li>
-            </ul>
-    </footer>
-</body>
+    <!-- <footer>
+      <a href="">WebStudio</a>
+      <address>г. Киев, пр-т Леси Украинки, 26</address>
+      <ul>
+        <li>
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
+    </footer> -->
+  </body>
 </html>
